# django-scss-setup

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg
base-django/: cli.py
base-django/scss_template/abstracts/: _index.scss  _properties.scss
base-django/scss_template/base/: _globals.scss  _reset.scss  _typography.scss
base-django/scss_template/components/: _buttons.scss  _inputs.scss  _navbar.scss
base-django/scss_template/layout/: _header.scss
base-django/template/: package.json
base-django/template/apps/user/: allauth_override.py  apps.py  forms.py  views.py
base-django/template/apps/user/auth/: flow_fix.py
base-django/template/apps/user/setting/: views.py
base-django/template/apps/user/templatetags/: user.py
base-django/template/core/settings/: base.py  development.py
base-django/template/templates/: base.html
base-django/template/templates/account/: password_reset_from_key.html  password_reset_from_key_done.html  verification_sent.html
base-django/template/templates/allauth/elements/: div.html  h1.html  provider.html  ul.html
base-django/template/templates/allauth/includes/: user_avatar.html
base-django/template/templates/allauth/layouts/: manage.html
base_django/: cli.py
base_django/commands/: create_project.py  dev.py  init.py  install.py  uninstall.py
base_django/commands/utils/: directory.py  get_root.py  group.py  package.py  pathFile.py
base_django/scss_template/: style.scss
base_django/scss_template/abstracts/: _functions.scss  _variables.scss
base_django/scss_template/components/: _messages.scss
base_django/scss_template/layout/: _footer.scss  _sidebar.scss
base_django/scss_template/pages/: _home.scss
base_django/template/apps/pages/: urls.py
base_django/template/apps/user/: admin.py  models.py  signals.py  urls.py
base_django/template/apps/user/migrations/: 0001_initial.py
base_django/template/apps/user/setting/: urls.py
base_django/template/apps/user/utils/: pathresolver.py
base_django/template/core/settings/: allauth.py
base_django/template/templates/account/: password_reset_done.html
base_django/template/templates/allauth/elements/: form.html  panel.html
base_django/template/templates/pages/: home.html
baseproject/: cli.py
baseproject/commands/: dev.py  init.py  install.py
baseproject/commands/utils/: get_root.py  pathFile.py
baseproject/scss_template/abstracts/: _mixins.scss
baseproject/scss_template/animation/: _animation.scss
baseproject/scss_template/components/: _cards.scss  _media.scss
baseproject/scss_template/layout/: _grid.scss
baseproject/template/apps/pages/: views.py
baseproject/template/apps/user/: adapter.py  manager.py
baseproject/template/apps/user/socialaccount/: adapters.py
baseproject/template/apps/user/utils/: converter.py  providerList.py
baseproject/template/core/: urls.py
baseproject/template/core/settings/: production.py
baseproject/template/static/css/: style.css
baseproject/template/static/js/: main.js
baseproject/template/staticfiles/CACHE/css/: output.01e7174171d5.css  output.070688e420f8.css  output.0d90fd9bdec1.css  output.16d04aecd585.css  output.2537daf66ca2.css  output.26d1385e5355.css  output.2c19eeff8d9c.css  output.2c6062cc0b74.css  output.4e8f0fa5e897.css  output.5920e224ff4b.css  output.69b38cb4c037.css  output.6efaf21f8030.css  output.74f0fd585eef.css  output.88592cdec294.css  output.990ad0f88337.css  output.acba5d7f617c.css  output.acbf3e71a9b0.css  output.c9e06d48c339.css  output.ddd007ad687f.css
baseproject/template/staticfiles/CACHE/js/: output.b3b3a55b3afd.js
baseproject/template/templates/account/: login.html  logout.html  password_reset.html  signup.html
baseproject/template/templates/allauth/elements/: field.html  h2.html  p.html  reauth.html  span.html  table.html
baseproject/template/templates/allauth/layouts/: entrance.html
baseproject/template/templates/socialaccount/snippets/: login.html
django_base_scss_setup.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
