[project]
name = "django-base-scss-setup"
version = "0.1.1"
description = "Quick SCSS (Sass) setup for Django projects with Django Base project template with allauth (Google, Facebook) and modular settings"
readme = "README.md"
license = "MIT"

authors = [
    { name = "Jamal Blaquera", email = "ugamedev08@gmail.com" }
]

dependencies = [
    "django",
    "django-allauth",
    "django-allauth[socialaccount]",
    "django-environ",
    "django-htmx",
    "django-compressor",
    "django-sass-processor",
    "click",
    "pillow",
    "whitenoise",
    "requests"
]

[tool.setuptools]
packages = ["base-django"]

[tool.setuptools.package-data]
base-django = [
    "template/**/*", 
    "template/**/*.html", 
    "scss_template/**/*",
    "scss_template/**/*.scss",
    "template/**/*.css", 
    "template/**/*.js", 
    "template/**/*.png", 
    "template/**/*.jpg", 
    "template/**/*.svg"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
django-base = "base-django.cli:create_project"
django-base-scss = "base-django.cli:cli"