[project]
name = "django-base-scss-setup"
version = "0.1.1"
description = "Quick SCSS setup for Django with base template"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"

authors = [
    { name = "Jamal Blaquera", email = "ugamedev08@gmail.com" }
]

dependencies = [
    "django",
    "django-allauth[socialaccount]",
    "django-environ",
    "django-htmx",
    "django-livereload-server",
    "django-compressor",
    "click>=8.0",
    "pillow",
    "whitenoise",
    "requests"
]

[tool.setuptools]
packages = ["base_django"]

[tool.setuptools.package-data]
base_django = ["**/*"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
django-base = "base_django.cli:cli"