[metadata]
name = django-base-docker
version = 0.1.1
description = Reusable Django base project
author = Your Name

[options]
packages = find:
include_package_data = True

[options.packages.find]
include = baseproject*

[options.package_data]
baseproject =
    template/**/*
    template/**/*.html
    static/**/*.css
    static/**/*.js
    static/**/*.png
    static/**/*.jpg
    static/**/*.svg

[options.exclude_package_data]
* =
    *.pyc
    __pycache__/*