[metadata]
name = django-base-scss-setup
version = 0.1.1
description = Quick SCSS (Sass) setup for Django projects with Django Base project template with allauth (Google, Facebook) and modular settings
author = "Jamal Blaquera"

[options]
packages = find:
include_package_data = True

[options.packages.find]
include = base-django*

[options.package_data]
base-django =
    template/**/*
    template/**/*.html
    scss_template/**/*
    scss_template/**/*.scss
    static/**/*.css
    static/**/*.js
    static/**/*.png
    static/**/*.jpg
    static/**/*.svg

[options.exclude_package_data]
* =
    *.pyc
    __pycache__/*